2003-04-18  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-arena-shape.c (nr_arena_shape_update): Switch fill
	completely to new renderer
	(nr_arena_shape_render): Ditto, but use masks as before

	* src/libnr/nr-svp-uncross.c (nr_svp_uncross_full): Pass most stress-tests

2003-04-15  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_pixblock_render_svp_mask_or): new method
	(nr_pixblock_render_svp_rgba): Frontend, implement for all pixblock modes
	(nr_svp_run_A8_OR): Run callback implementation
	(nr_svp_run_R8G8B8): Ditto
	(nr_svp_run_R8G8B8A8P_EMPTY): Ditto
	(nr_svp_run_R8G8B8A8P_R8G8B8A8P): Ditto
	(nr_svp_run_R8G8B8A8N_R8G8B8A8N): Ditto
	(nr_svp_render): Implement using generic run callbacks

2003-04-14  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c (nr_pixblock_render_svp_rgba): Do runs properly,
	skip if coverage stays 0

2003-04-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-svp-render.c: Moved here from old arena code

	* src/libnr/nr-svp-render.h: Ditto

	* src/libnr/nr-svp.c: Ditto

	* src/libnr/nr-svp.h: Ditto

	* src/display/nr-arena-shape.h: Optional experimental new renderer

	* src/libnrtype/nr-typeface.h: Port to NRObject

	* src/display/canvas-arena.c (sp_canvas_arena_init): Use active object
	listener instead of g-signals
	(sp_canvas_arena_destroy): Ditto

	* src/display/nr-arena.h: Derive from NRActiveobject

	* src/display/nr-object.c (nr_object_delete): proper lifecycle management
	(nr_object_setup): Ditto, automatic object
	(nr_object_release): Ditto
	(nr_active_object_get_type): Added NRActiveObject

	* src/display/nr-object.h: Added NRActiveObject

2003-04-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/display/nr-object.c: Reimplement in standalone way

	* src/display/nr-object.h: Reimplement in standalone way

2003-04-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-marker.c (sp_marker_show_dimension): Reimplement
	(sp_marker_show_instance): Ditto
